--- a/SRC/engine/properties/heatsource/nonlinear/CMakeLists.txt
+++ b/SRC/engine/properties/heatsource/nonlinear/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(oof2engine
   nonlinear_heat_source.C
   nonlinear_heat_source.h)
 
-swig_sources(
+oof_swig_sources(
   SWIGFILES
   nonlinear_heat_source
   LIBRARIES
