--- a/SRC/engine/properties/interfaces/surfacetension/simpletension2/CMakeLists.txt
+++ b/SRC/engine/properties/interfaces/surfacetension/simpletension2/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(oof2engine
   simpletension2.C
   simpletension2.h)
 
-swig_sources(
+oof_swig_sources(
   SWIGFILES
   simpletension2
   LIBRARIES
