--- a/SRC/engine/properties/interfaces/surfacetest/CMakeLists.txt
+++ b/SRC/engine/properties/interfaces/surfacetest/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(oof2engine
   surfacetest.C
   surfacetest.h)
 
-swig_sources(
+oof_swig_sources(
   SWIGFILES
   surfacetest
   LIBRARIES
