--- a/SRC/engine/properties/stressfreestrain/CMakeLists.txt
+++ b/SRC/engine/properties/stressfreestrain/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(oof2engine
   stressfreestrain.C
   stressfreestrain.h)
 
-swig_sources(
+oof_swig_sources(
   SWIGFILES
   stressfreestrain
   LIBRARIES
