Improvements to the extension machinery.
Hid the OOF2COMMON and OOF2ENGINE variables in the extension's CMakeLists.txt.

Rewrote most of the extension README.

Minor cleanup in CMakeLists_subdir.txt.

Moved ramberg-osgood out of EXTENSION_TEMPLATES because it's not
a template.  It still needs to be updated.

Added OOF.File.Load.Module to make it easier to import a module,
and to log its importation.

Added a call to os.path.expanduser in the handling of the --pathdir
option.  Otherwise "oof2 --pathdir=~/mymodules" doesn't work.

--- a/EXTENSION_TEMPLATES/CMakeLists.txt
+++ b/EXTENSION_TEMPLATES/CMakeLists.txt
@@ -25,6 +25,7 @@ include("%OOF2PREFIX%/share/oof2/templates/oofbuildtools.cmake")
 
 find_library(OOF2COMMON oof2common %OOF2PREFIX%/lib)
 find_library(OOF2ENGINE oof2engine %OOF2PREFIX%/lib)
+mark_as_advanced(OOF2COMMON OOF2ENGINE)
 
 install(
   FILES
