--- a/SRC/EXTENSIONS/ramberg_osgood/CMakeLists.txt
+++ b/SRC/EXTENSIONS/ramberg_osgood/CMakeLists.txt
@@ -1,13 +1,22 @@
-# -*- python -*-
-
 # This software was produced by NIST, an agency of the U.S. government,
 # and by statute is not subject to copyright in the United States.
 # Recipients of this software assume all responsibilities associated
 # with its operation, modification and maintenance. However, to
-# facilitate maintenance we ask that before distributing modified
+# facilitate maintenance we ask that before distributing modifed
 # versions of this software, you first contact the authors at
-# oof_manager@nist.gov. 
+# oof_manager@nist.gov.
 
-import ooflib.SWIG.EXTENSIONS.diffusion.diffusion
-import ooflib.SWIG.EXTENSIONS.diffusion.charge
-import ooflib.SWIG.EXTENSIONS.diffusion.ion
+target_sources(
+  oof2engine
+  PRIVATE
+  ramberg_osgood.C
+  ramberg_osgood.h
+  )
+
+oof_swig_sources(
+  SWIGFILES
+  ramberg_osgood
+  LIBRARIES
+  oof2common
+  oof2engine
+  )
