Tweaks to the extension machinery.
oofbuildtools.cmake is now installed in PREFIX/share/oof2/tools,
instead of PREFIX/share/oof2/templates.

oof2-extension-setup has a --list option to list the
available templates.

Added a comment and TODO in oofbuildtools.cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -411,10 +411,10 @@ if(OOF2_DEV_INSTALL)
     )
 
   # Install the cmake functions (also used in this file) into
-  # share/oof2/templates
+  # share/oof2/tools
   install(
     FILES ${PROJECT_SOURCE_DIR}/oofbuildtools.cmake
-    DESTINATION share/oof2/templates
+    DESTINATION share/oof2/tools
     )
 
 endif()  # OOF2_DEV_INSTALL
