More tweaks to extension-building machinery and related bits.
swig_sources now automatically adds the python include directory
to the C++ options, and doesn't add the SRC directory.  oof_swig_sources,
the wrapped version used by oof2, adds SRC.

Removed obsolete code from oof2-extension-setup.in

Added some comments to property.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,7 +199,8 @@ configure_file(
 #=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
 
 # The swig_sources() function defined in oofbuildtools.cmake needs to
-# be wrapped so that the files are installed in the right spots.
+# be wrapped so that the files are installed in the right spots and
+# the SRC directory is searched for header files.
 
 function(oof_swig_sources)
     # Get the path from the top of the source directory hierarchy to
@@ -223,7 +224,10 @@ function(oof_swig_sources)
     endif()
     set(OOF2PYDEST ${PYDEST}/ooflib/SWIG/${relpath})
 
-    swig_sources(${ARGV} SWIGDEST ${OOF2PYDEST})
+    swig_sources(${ARGV}
+      SWIGDEST ${OOF2PYDEST}
+      INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/SRC
+    )
 endfunction()
 
 #=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
